		messages.
		Removed some debug logging from the RFC->FTN gate.
		Implemented the FileMgr and AreaMgr pause and resume commands.
		Changed logging when AreaMgr/FileMgr commands did fail.
		Some checks improved and fixed some potential sigsegv crashes.
		Reduced aka match level for (dis)connect areas to zone, net.
		This should fix problems on systems with multiple aka's when
		the first aka is not the aka in the areas.
		In mgr result reports, lines with connected areas do now also
		display the aka to which they are connected.
		The file forward function now always puts a 8.3 filename in
		the outgoing ticfile. For most files nothing is changed.

	mball:
		Will not crash anymore when it needs more then 10 minutes to
		create the allfiles and newfiles lists.

	mbtask:
		Removed some debug logging.
		Creates the semafore is_inet when the internet connections is
		available, and removes it when it is down.
		Added test for ISDN/modem lines in use.
		Lost of code cleanup.
		No setup setting anymore for maximum POTS and ISDN lines, this
		is now automatic.
		mbtask will now update internal counters how many ISDN and POTS
		lines are free to use for dialout.

	mbcico:
		Fixed binkp driver to accept incoming unprotected sessions.
		Temporary added extra password handling logs.
		If a binkp session comes in and there already is a session
		with that node, mbcico stopts the binkp session with an error.
		
	mbsebbs:
		On some systems the download taglists contained garbage after
		the short filename causing wrong filenames at the users side.

	mbuser:
		If a new user has registered and not yet used the bbs, mbuser
		would kill that user because the last login date wasn't set.
		It will use the registration date instead.

	hatch:
		A new shellscript to hatch files in a tic area.

	mbuseradd:
		Added support for vpopmail, vadduser command.

	mbpasswd:
		Added support for vpopmail, vpasswd command.

	mbuser:
		Added support for vpopmail, vdeluser command.
