@@ -4644,6 +4644,8 @@ v0.33.20        10-Feb-2002
 		display the aka to which they are connected.
 		The file forward function now always puts a 8.3 filename in
 		the outgoing ticfile. For most files nothing is changed.
+		AreaMgr and FileMgr netmails are now split into more netmails
+		when the become too large.
 
 	mball:
 		Will not crash anymore when it needs more then 10 minutes to
